--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Multiverse_of_Geeks" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NewApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -16,12 +16,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.Multiverse_of_Geeks.NoActionBar">
+    <style name="Theme.NewApp.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.Multiverse_of_Geeks.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.NewApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.Multiverse_of_Geeks.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.NewApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
