--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,11 @@
                 android:id="@+id/nav_slideshow"
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="@string/menu_slideshow" />
+
+        <!--place holder-->
+        <item
+            android:id="@+id/nav_create_account"
+            android:icon="@drawable/create_account_ic"
+            android:title="@string/create_profile_nav"/>
     </group>
 </menu>
