--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--create_profile dimens-->
+    <dimen name="edit_text_margin">20dp</dimen>
+    <dimen name="edit_text_top_margin">40dp</dimen>
 </resources>
