--- a/app/src/main/res/layout/fragment_create_profile.xml
+++ b/app/src/main/res/layout/fragment_create_profile.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:cardCornerRadius="100dp"
-                android:id="@+id/image_card_view_holder"
-                android:layout_marginTop="40dp">
+            android:id="@+id/image_card_view_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:cardCornerRadius="100dp"
+            android:layout_gravity="center">
 
             <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp" />
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_launcher_background"
+                android:contentDescription="@string/profile_image_disc"
+                android:layout_gravity="center"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -37,10 +38,7 @@
             android:hint="@string/f_name"
             android:inputType="text"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_card_view_holder" />
+            android:layout_gravity="center" />
 
         <EditText
             android:id="@+id/l_name_field"
@@ -53,9 +51,7 @@
             android:hint="@string/l_name"
             android:inputType="text"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/f_name_field" />
+            android:layout_gravity="center" />
 
         <EditText
             android:id="@+id/u_name_field"
@@ -68,22 +64,18 @@
             android:hint="@string/u_name"
             android:inputType="text"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/l_name_field" />
+            android:layout_gravity="center"/>
 
         <View
-                android:id="@+id/divider_1"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black"
-                android:layout_marginTop="9dp"
-                app:layout_constraintTop_toBottomOf="@+id/u_name_field"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginVertical="@dimen/edit_text_margin"
-                android:layout_marginLeft="@dimen/edit_text_margin"
-                android:layout_marginRight="@dimen/edit_text_margin" />
+            android:id="@+id/divider_1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="@dimen/edit_text_margin"
+            android:layout_marginLeft="@dimen/edit_text_margin"
+            android:layout_marginTop="9dp"
+            android:layout_marginRight="@dimen/edit_text_margin"
+            android:background="@color/black"
+            android:layout_gravity="center"/>
 
         <EditText
             android:id="@+id/email_field"
@@ -97,9 +89,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider_1" />
+            android:layout_gravity="center"/>
 
         <EditText
             android:id="@+id/password_field"
@@ -108,14 +98,12 @@
             android:layout_marginLeft="@dimen/edit_text_margin"
             android:layout_marginTop="@dimen/edit_text_margin"
             android:layout_marginRight="@dimen/edit_text_margin"
-            android:drawableStart="@drawable/password_ic"
             android:autofillHints="password"
+            android:drawableStart="@drawable/password_ic"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_field" />
+            android:layout_gravity="center"/>
 
         <EditText
             android:id="@+id/r_password_field"
@@ -124,62 +112,53 @@
             android:layout_marginLeft="@dimen/edit_text_margin"
             android:layout_marginTop="@dimen/edit_text_margin"
             android:layout_marginRight="@dimen/edit_text_margin"
-            android:drawableStart="@drawable/password_ic"
             android:autofillHints="password"
+            android:drawableStart="@drawable/password_ic"
             android:hint="@string/r_password"
             android:inputType="textPassword"
             android:minHeight="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_field" />
+            android:layout_gravity="center"/>
 
         <CheckBox
-                android:id="@+id/terms_checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.093"
-                app:layout_constraintTop_toBottomOf="@+id/r_password_field"
-                android:text="@string/term_checkbox"
-                android:layout_marginTop="@dimen/edit_text_margin"/>
+            android:id="@+id/terms_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edit_text_margin"
+            android:text="@string/term_checkbox"
+            android:layout_gravity="start"
+            android:layout_marginStart="@dimen/edit_text_margin"/>
 
         <Button
-                android:id="@+id/create_account_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/create_account_button"
-                app:layout_constraintTop_toBottomOf="@+id/terms_checkbox"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/edit_text_margin"
-                app:layout_constraintHorizontal_bias="0.075" />
+            android:id="@+id/create_account_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edit_text_margin"
+            android:text="@string/create_account_button"
+            android:layout_gravity="start"
+            android:layout_marginStart="@dimen/edit_text_margin"/>
 
         <View
-                android:id="@+id/divider_2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/create_account_button"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="@dimen/edit_text_margin"
-                android:layout_marginRight="@dimen/edit_text_margin"
-                android:layout_marginLeft="@dimen/edit_text_margin"
-                app:layout_constraintEnd_toEndOf="parent" />
+            android:id="@+id/divider_2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/edit_text_margin"
+            android:layout_marginTop="@dimen/edit_text_margin"
+            android:layout_marginRight="@dimen/edit_text_margin"
+            android:background="@color/black"
+            android:layout_gravity="center"/>
 
         <TextView
-                android:id="@+id/go_to_login_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/already_have_account"
-                app:layout_constraintTop_toBottomOf="@+id/divider_2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/edit_text_margin"
-                app:layout_constraintHorizontal_bias="0.186"
-                android:textSize="30sp"/>
+            android:id="@+id/go_to_login_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/edit_text_margin"
+            android:layout_marginTop="@dimen/edit_text_margin"
+            android:layout_marginRight="@dimen/edit_text_margin"
+            android:text="@string/already_have_account"
+            android:textSize="20sp"
+            android:layout_gravity="start"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </ScrollView>
