login layout added

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,5 +22,9 @@
             android:id="@+id/nav_create_account"
             android:icon="@drawable/create_account_ic"
             android:title="@string/create_profile_nav"/>
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/login_ic"
+            android:title="@string/login"/>
     </group>
 </menu>
