--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,5 +26,10 @@
             android:id="@+id/nav_login"
             android:icon="@drawable/login_ic"
             android:title="@string/login"/>
+
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/about_ic"
+            android:title="@string/about_nav"/>
     </group>
 </menu>
