--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,7 @@
     <dimen name="login_edit_text_margin">40dp</dimen>
     <dimen name="login_edit_text_top_margin">75dp</dimen>
     <dimen name="text_size_about">15sp</dimen>
+
+    <!--about dimens-->
+    <dimen name="about_margin">20dp</dimen>
 </resources>
