--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,4 +41,10 @@
         android:label="@string/about_nav"
         tools:layout="@layout/fragment_about"/>
 
+    <fragment
+        android:id="@+id/nav_my_profile"
+        android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.my_profile.MyProfileFragment"
+        android:label="@string/my_profile_nav"
+        tools:layout="@layout/fragment_my_profile"/>
+
 </navigation>
