games and movies fragments + layouts added

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -34,6 +34,16 @@
                         android:title="@string/menu_home" />
 
                 <item
+                        android:id="@+id/nav_movies"
+                        android:icon="@drawable/movie_ic"
+                        android:title="@string/movies_nav"/>
+
+                <item
+                        android:id="@+id/nav_games"
+                        android:icon="@drawable/games_ic"
+                        android:title="@string/games_nav"/>
+
+                <item
                         android:id="@+id/nav_about"
                         android:icon="@drawable/about_ic"
                         android:title="@string/about_nav" />
