--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,21 +10,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="@dimen/edit_text_margin">
+            android:layout_marginStart="@dimen/edit_text_margin"
+            android:layout_marginEnd="@dimen/edit_text_margin">
 
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:src="@mipmap/mog_log_foreground"
-                android:scaleX="1.5"
-                android:scaleY="1.5"/>
+                android:src="@mipmap/my_logo_foreground"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="@dimen/logo_top"/>
 
         <TextView
                 android:id="@+id/text_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewStart"
-                android:text="@string/home_text" />
+                android:text="@string/home_text"
+                android:layout_marginTop="@dimen/edit_text_margin"/>
 
     </LinearLayout>
 
