--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,5 +5,5 @@
             android:id="@+id/action_settings"
             android:title="@string/action_settings"
             android:orderInCategory="100"
-            app:showAsAction="never" />
+            app:showAsAction="ifRoom" android:icon="@drawable/settings_ic"/>
 </menu>
