fix bug with navigation from movie genre to movies (removed clickable and focusable from cardview)

--- a/app/src/main/res/layout/movie_genre_item.xml
+++ b/app/src/main/res/layout/movie_genre_item.xml
@@ -11,9 +11,7 @@
             android:id="@+id/genre_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
-            android:clickable="true"
-            android:focusable="true">
+            app:cardCornerRadius="10dp">
 
         <TextView
                 android:id="@+id/genre_text_view"
