--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -5,9 +5,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movies_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"/>-->
+    <TextView
+            android:id="@+id/title_test"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="blabla"/>
+    <ImageView
+            android:id="@+id/image_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/my_logo_background"/>
 
 </LinearLayout>
