--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:id="@+id/movie_container">
 
-    <androidx.cardview.widget.CardView
-            android:id="@+id/movie_card_view"
+    <TextView
+            android:id="@+id/movie_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="PLACEHOLDER"
+            android:gravity="center"
+            android:elevation="2dp" />
+
+    <ImageView
+            android:id="@+id/movie_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp">
+            android:src="@drawable/my_logo_background" />
 
-        <TextView
-                android:id="@+id/movie_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/my_logo_background"
-                android:text="PLACEHOLDER"
-                android:gravity="center"
-                android:elevation="2dp"/>
-
-    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
