--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -4,21 +4,68 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/movie_container">
+        android:id="@+id/movie_container"
+        android:layout_marginTop="@dimen/edit_text_margin"
+        android:layout_marginBottom="@dimen/edit_text_margin">
 
-    <TextView
-            android:id="@+id/movie_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="PLACEHOLDER"
-            android:gravity="center"
-            android:elevation="2dp" />
 
-    <ImageView
-            android:id="@+id/movie_image"
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/my_logo_background" />
+            app:cardCornerRadius="2dp">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/movie_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="PLACEHOLDER"
+                    android:gravity="center"
+                    android:elevation="2dp"
+                    android:textSize="30sp"/>
+
+            <ImageView
+                    android:id="@+id/movie_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/my_logo_background" />
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/edit_text_margin">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Movie Ratting"
+                        android:layout_gravity="center"
+                        android:gravity="center"/>
+
+            <RatingBar
+                    android:id="@+id/movie_rating_bar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
+                    android:numStars="10"
+                    android:isIndicator="false"
+                    android:padding="8dp"
+                    android:rating="0.0"
+                    android:stepSize="0.5" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
