--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -1,16 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center">
+        android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/movie_id"
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="placeholder"
-            android:textSize="50sp"/>
+            android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/single_movie_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_text"
+                android:textSize="35sp"
+                android:gravity="center"
+                android:layout_margin="@dimen/edit_text_margin" />
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/edit_text_margin"
+                android:layout_marginEnd="@dimen/edit_text_margin"
+                app:cardCornerRadius="5dp"
+                android:layout_gravity="center">
+
+            <ImageView
+                    android:id="@+id/single_movie_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/mog_log_background"
+                    android:contentDescription="@string/movie_image_desc" />
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/edit_text_margin">
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/ratting"
+                    android:paddingTop="4dp"/>
+
+            <RatingBar
+                    android:id="@+id/single_movie_rating_bar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
+                    android:numStars="10"
+                    android:isIndicator="true"
+                    android:paddingTop="8dp"
+                    android:layout_marginEnd="@dimen/edit_text_top_margin"
+                    android:rating="0.0"
+                    android:stepSize="0.5" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/edit_text_margin">
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/r_year"/>
+
+            <TextView
+                    android:id="@+id/movie_release_year"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/home_text"/>
+
+        </LinearLayout>
+
+        <TextView
+                android:id="@+id/movie_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_text"
+                android:layout_marginStart="@dimen/edit_text_margin"
+                android:layout_marginTop="@dimen/edit_text_margin" />
+
+
+    </LinearLayout>
+
+</ScrollView>
