--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -44,21 +44,18 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Movie Ratting"
+                        android:text="@string/ratting"
                         android:layout_gravity="center"
                         android:gravity="center"/>
 
-            <RatingBar
-                    android:id="@+id/movie_rating_bar"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
-                    android:numStars="10"
-                    android:isIndicator="false"
-                    android:padding="8dp"
-                    android:rating="0.0"
-                    android:stepSize="0.5" />
+                <TextView
+                        android:id="@+id/movie_ratting"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:drawableStartCompat="@drawable/ratting_ic"
+                        android:text="@string/home_text"
+                        android:gravity="center_vertical"/>
 
             </LinearLayout>
 
