--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -60,6 +60,12 @@
 
         </HorizontalScrollView>
 
+        <androidx.appcompat.widget.SearchView
+                android:id="@+id/movies_search_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/scrollView"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/movies_rv"
@@ -67,7 +73,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+                app:layout_constraintTop_toBottomOf="@+id/movies_search_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
