--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/ratting"
-                    android:paddingTop="4dp"/>
+                    android:paddingTop="4dp" />
 
             <RatingBar
                     android:id="@+id/single_movie_rating_bar"
@@ -74,14 +74,14 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/r_year"/>
+                    android:text="@string/r_year" />
 
             <TextView
                     android:id="@+id/movie_release_year"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/home_text"/>
+                    android:text="@string/home_text" />
 
         </LinearLayout>
 
@@ -92,6 +92,36 @@
                 android:text="@string/home_text"
                 android:layout_marginStart="@dimen/edit_text_margin"
                 android:layout_marginTop="@dimen/edit_text_margin" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edit_text_margin">
+
+            <androidx.core.widget.NestedScrollView
+                    android:id="@+id/n_scroll_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/movie_coming_rv_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+            </androidx.core.widget.NestedScrollView>
+
+            <EditText
+                    android:id="@+id/comment_edit_text_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:importantForAutofill="yes"
+                    android:hint="@string/comment"
+                    app:layout_constraintTop_toBottomOf="@+id/n_scroll_view"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
