--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -94,6 +94,15 @@
                 android:layout_marginStart="@dimen/edit_text_margin"
                 android:layout_marginEnd="@dimen/edit_text_margin"/>
 
+        <Button
+                android:id="@+id/to_similar_movie_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/to_similar"
+                android:drawableEnd="@drawable/arrow_circle_right_ic"
+                android:layout_marginStart="@dimen/edit_text_margin"
+                android:layout_marginEnd="@dimen/edit_text_margin" />
+
         <TextView
                 android:id="@+id/movie_overview"
                 android:layout_width="match_parent"
