--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -116,20 +116,15 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/edit_text_margin">
 
-            <androidx.core.widget.NestedScrollView
-                    android:id="@+id/n_scroll_view"
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/movie_coming_rv_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/movie_coming_rv_id"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-            </androidx.core.widget.NestedScrollView>
 
             <EditText
                     android:id="@+id/comment_edit_text_id"
@@ -137,7 +132,8 @@
                     android:layout_height="wrap_content"
                     android:importantForAutofill="yes"
                     android:hint="@string/comment"
-                    app:layout_constraintTop_toBottomOf="@+id/n_scroll_view"/>
+                    app:layout_constraintTop_toBottomOf="@+id/movie_coming_rv_id"
+                    android:minHeight="48dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
